# solvers-seminar

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
cmake/: PopulateSYCL.cmake
examples/: CMakeLists.txt  gradient_descent_solver_example.cpp
slae/: CMakeLists.txt
slae/include/slae/solvers/: gradient_descent_solver.hpp  isolver.hpp
slae/include/slae/utility/: check_matrix_definite.hpp
slae/tests/: CMakeLists.txt  gradient_descent_solver_unittest.cpp
